First array method and refactoring oop
